trunk/Archive2/31/c3f037f3c069c0/output
main.cpp: In function 'int main()':
main.cpp:13:26: error: 'tz_utc' was not declared in this scope
   std::cout << "TZ: " << tz_utc->base_utc_offset() << std::endl;
                          ^
